commited by muhammmad

--- a/index.html
+++ b/index.html
@@ -49,12 +49,18 @@
         <p>This is an example of a daily wazifa routine that a murid (disciple) may follow below link:</p>
         <a href ="sanw.html" target="_blank"> Silsilah Aaliya Naqshbandiyah Ke Wazaif</a>
     </section>
+    <section>
+        <p>Sunnat Azkaar of the Morning and the Evening</p>
+        <p>From the true Ahadith of Murshid e Kamil, Imam-ul-Ambiya ﷺ</p>
+        <a href="asgar.html" target="_blank">Sunnat Azkaar</a>
+    </section>
     </main>
     <footer>
         <p style="text-align:center; font-size:14px; color:gray;">
             © 2023 Darussulok. All rights reserved.
         </p>
-    </footer>    
+    </footer>
+
     
 </body>
 </html>
