buttons add by Muhammad

--- a/asgar.html
+++ b/asgar.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" 
+    integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <title>www.darussulok.com</title>
 </head>
 <body>
@@ -38,21 +40,27 @@
                 بسم الله والحمد لله والصلاة والسلام على رسول الله وعلى أزواجه وآله وأصحابه</h2>
             <h3><b>أَلاَ بِذِكْرِ اللّهِ تَطْمَئِنُّ الْقُلُوبُ </b></h3>
             <p><b><u>Translation:</u></b> Surely in the remembrance of Allah ﷺ do hearts find comfort.[الرعد: آیت 28] 
-                <a href="https://quran.com/13/28" target="_blank" style="color:blue;"> Reference</a></p>
+                <a href="https://quran.com/13/28" target="_blank" style="color:blue;">
+                    <button  type="button" class="btn btn-danger btn-sm">Reference</button></a></p>
             <p><b><u>True Hadith:</u></b>The slave who remembers (glorifies the Praises of) his Lord is like a living creature</p>
             <p>and the one who does not remember (does not glorify the Praises of) his Lord is like the dead one.</p>
-            <p>[بخاری: 6407 ؛ مسلم: 1823] <a href="https://sunnah.com/bukhari:6407" target="_blank" style="color:blue;"> Reference</a></p>
+            <p>[بخاری: 6407 ؛ مسلم: 1823] <a href="https://sunnah.com/bukhari:6407" target="_blank" style="color:blue;">
+            <button  type="button" class="btn btn-danger btn-sm">Reference</button></a></p>
             <p><b><u>True Hadith Qudsi:</u></b> I am with my slave when he remembers me</p> 
             <p>and his lips move because of saying My Name.</p>
-            <p>[سنن ابن ماجه: 3792] <a href="https://sunnah.com/ibnmajah:3792" target="_blank" style="color:blue;"> Reference</a></p>
+            <p>[سنن ابن ماجه: 3792] <a href="https://sunnah.com/ibnmajah:3792" target="_blank" style="color:blue;">
+             <button  type="button" class="btn btn-danger btn-sm">Reference</button></a></p>   
+            </a></p>
             <h3><b>"...وَاذْكُر رَّبَّكَ كَثِيرًا وَسَبِّحْ بِالْعَشِيِّ وَالإِبْكَارِ" [آل عمران:41]</b></h3>
             <p><b><u>Translation:</u></b> And remember your Lord much and glorify Him in the evening and the morning.[آل عمران: آیت 41]
-                <a href="https://quran.com/3/41" target="_blank" style="color:blue;"> Reference</a></p>
+                <a href="https://quran.com/3/41" target="_blank" style="color:blue;">
+                    <button  type="button" class="btn btn-danger btn-sm">Reference</button></a></p>
             </p>
             <p><b><u>True Hadith:</u></b> A man said:O Messenger of Allah ﷺ, indeed, the legislated acts of Islam have become</p>
             <p>too much for me, so inform me of a thing that I should stick to. He ﷺ said: The remembrance of</p>
             <p>Allah should always continue on your tongue.</p>
-            <p>[جامع ترمذی: 3375] <a href="https://sunnah.com/tirmidhi:3375" target="_blank" style="color:blue;"> Reference</a></p>
+            <p>[جامع ترمذی: 3375] <a href="https://sunnah.com/tirmidhi:3375" target="_blank" style="color:blue;">
+                <button  type="button" class="btn btn-danger btn-sm">Reference</button></a></p>
          </section>
          </div>
          <section>
@@ -68,7 +76,8 @@
                 <li>He who recites Ayat-al-Kursi (Al-Baqara: 255) becomes safe from Shaitan and Jinn and a guard is appointed for his safety.
                 <p>(1 time, in the morning and in the evening)</p>
                 <p>[بخارى: 2311، مسلم: 810، الترمذي: 2879، النسائي: 9927، المستدرك للحاكم: 2064]
-                    <a href="https://sunnah.com/bukhari:2311" target="_blank" style="color:blue;"> Reference</a></p>    
+                    <a href="https://sunnah.com/bukhari:2311" target="_blank" style="color:blue;">
+                        <button  type="button" class="btn btn-danger btn-sm">Reference</button></a></p>    
                 </li>
                 
                 <li>The recitation of Muawwidhat will suffice you against everything (against Jinn and magic)
@@ -76,18 +85,21 @@
                     <h3><b>قُلْ هُوَ اللَّهُ أَحَدٌ</b></h3>
                     <h3><b>قُلْ أَعُوذُ بِرَبِّ الْفَلَقِ</b></h3>
                     <h3><b>قُلْ أَعُوذُ بِرَبِّ النَّاسِ</b></h3>
-                    <p>[جامع ترمذي: 3575، سنن أبي داود: 5082] <a href="https://sunnah.com/tirmidhi:3575" 
-                        target="_blank" style="color:blue;"> Reference</a></p>
+                    <p>[جامع ترمذی: 3575، سنن أبي داود: 5082] <a href="https://sunnah.com/tirmidhi:3575" 
+                        target="_blank" style="color:blue;">
+                        <button  type="button" class="btn btn-danger btn-sm">Reference</button></a></p>
                     <p><span style="font-weight:bold; color:red">Note:</span> 
                     Reciting (of the above Surahs) 3 times at night and then blowing 
                     on the palms and rubbing on the body is Sunnah.
-                    <a href="https://sunnah.com/bukhari:5017" target="_blank" style="color:blue;"> Reference</a></p>    
+                    <a href="https://sunnah.com/bukhari:5017" target="_blank" style="color:blue;">
+                        <button  type="button" class="btn btn-danger btn-sm">Reference</button></a></p>    
                     </li>
                     
                     <li>The one who recites these words gets reward of freeing 4 slaves. And he is guarded against every</li>
                     <p>dangerous thing and Shaitan during the entire day and night (Ten times, in the morning and in the evening.)</p>
                     <p>[مسلم: 6844، سنن أبي داود: 5077] <a href="https://sunnah.com/abudawud:5077" 
-                        target="_blank" style="color:blue;"> Reference</a></p>
+                        target="_blank" style="color:blue;">
+                        <button  type="button" class="btn btn-danger btn-sm">Reference</button></a></p>
                     <h3><b>Arabic:<span style="color:green"> لا إله إلا الله وحده لا شريك له، له الملك وله الحمد وهو على كل شيء قدير</span></b></h3>
                     <p><b><u>Translation:</u></b> There is none worthy of worship but Allah alone with no partner or associate,</p>
                     <p>He is the dominion, to Him is praise and he has power over all things.</p>
@@ -95,8 +107,10 @@
                     <li>The one who recites these words will surely get the Heaven and Allah will please him on the Day of Judgement.</li>
                     <p>(Three times, in the morning and in the evening.)</p>
                     <p>[سنن ابن داود: 5072، مسند أحمد: 18990] <a href="https://sunnah.com/abudawud:5072" 
-                        target="_blank" style="color:blue;"> Reference</a></p>
+                        target="_blank" style="color:blue;">
+                        <button  type="button" class="btn btn-danger btn-sm">Reference</button></a></p>
                     <h3><b>Arabic:</b><span style="color:green">رَضِيتُ بِاللهِ رَبًّا وَبِالإِسْلاَمِ دِينًا وَبِمُحَمَّدٍ  نَبِيًّا</span></h3>
+                    <p><b><u>Translation:</u></b>We are pleased with Allah as our Lord, Islam as our religion, and Muhammad ﷺ as our Messenger.</p>
                 </ol>
          </section>
     </main>
