--- a/sanw.html
+++ b/sanw.html
@@ -41,7 +41,7 @@
     </header>
     <section>    
         <p>
-         <span style="color:white; background-color:green;">(1)ISTIGHFAR: </span> <b>Astagfirullaha Rabbee Minn-Kulli Zambeu-Wa Atoobi Elayh.</b>  
+         <span style="color:white; background-color:green;">1.ISTIGHFAR: </span> <b>Astagfirullaha Rabbee Minn-Kulli Zambeu-Wa Atoobi Elayh.</b>  
         </p>
         <p>Subah-100 Times & Shaam-100 Times</p>
         <p>
