Added extar fecuters by Muhammad

--- a/index.html
+++ b/index.html
@@ -3,64 +3,166 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>www.darussulok.com
-    </title>
+    <title>Darussulok - Islamic Gathering</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Amiri&display=swap" rel="stylesheet">
+
+    <style>
+        body {
+            background: #fdf8ef;
+            font-family: 'Amiri', serif;
+            /* background-size: cover;
+            background-repeat: no-repeat;
+            background-attachment: fixed; */
+
+
+        }
+
+        /* Ornamental Header */
+        header {
+            background: linear-gradient(135deg, #006400, #004d00);
+            color: white;
+            text-align: center;
+            padding: 40px 20px;
+            border-bottom: 8px double #d4af37;
+            position: relative;
+        }
+
+        header::after {
+            content: "";
+            position: absolute;
+            bottom: -15px;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 80%;
+            height: 8px;
+            background: #d4af37;
+            border-radius: 10px;
+        }
+
+        header h1 {
+            font-size: 2.3rem;
+            margin-bottom: 10px;
+        }
+
+        /* Golden Frame Sections */
+        section {
+            background: rgba(255, 255, 255, 0.95);
+            padding: 25px;
+            margin: 30px auto;
+            max-width: 900px;
+            border: 6px double #d4af37;
+            border-radius: 20px;
+            box-shadow: 0px 8px 25px rgba(0,0,0,0.15);
+        }
+
+        /* Decorative Titles */
+        h2, h4 {
+            color: #006400;
+            font-weight: bold;
+            text-align: center;
+            margin-bottom: 15px;
+        }
+
+        h2::after, h4::after {
+            content: "❁";
+            display: block;
+            color: #d4af37;
+            font-size: 18px;
+            margin-top: 5px;
+        }
+
+        p {
+            font-size: 18px;
+            line-height: 1.7;
+            text-align: justify;
+        }
+
+        /* Decorative Image */
+        img {
+            display: block;
+            margin: 0 auto 20px;
+            border: 6px solid #d4af37;
+            border-radius: 50%;
+            background: white;
+            padding: 5px;
+            box-shadow: 0px 4px 15px rgba(0,0,0,0.2);
+        }
+
+        /* Button Style */
+        .btn-success {
+            background: linear-gradient(135deg, #006400, #004d00) !important;
+            border: 2px solid #d4af37;
+            font-weight: bold;
+            padding: 8px 18px;
+            border-radius: 25px;
+        }
+
+        footer {
+            background: #004d00;
+            color: white;
+            text-align: center;
+            padding: 12px;
+            font-size: 14px;
+            border-top: 5px solid #d4af37;
+            margin-top: 40px;
+        }
+    </style>
 </head>
 <body>
+
     <header>
-        <h1 style="text-align:center; color:green; background-color:lightgray;">بِسْمِ اللهِ الرَّحْمٰنِ الرَّحِيْمِ</h1>
+        <h1>بِسْمِ اللهِ الرَّحْمٰنِ الرَّحِيْمِ</h1>
+        <h3>✨ Darussulok - Mahana Islaahi Majlis Bangalore ✨</h3>
     </header>
+
     <main>
-    <section>
-    <div style="text-align:center;">
-         <h2 style="color:blue; background-color:lightgray;">Darussulok</h2>
-         <img src="Image1.png" alt="Darussulok Logo" style="width:200px;height:200px;">
-         <h3>✨MAHANA ISLAAHI MAJLIS BANGALORE✨</h3>
-         <p style="font-size:18px;">
-        A "Darusuluk Islahi wa Tarbiyat Majlis" is an Islamic gathering focused on
-        spiritual reform (<strong>Islah</strong>) and upbringing/training (<strong>Tarbiyat</strong>).
-        </p>
+        <section>
+            <img src="Image1.png" alt="Darussulok Logo" width="200" height="200">
+            <h2>Spiritual Reform & Tarbiyat</h2>
+            <p>
+                A "Darusuluk Islahi wa Tarbiyat Majlis" is an Islamic gathering focused on
+                spiritual reform (<strong>Islah</strong>) and upbringing/training (<strong>Tarbiyat</strong>).
+                These gatherings are often held in homes, masjids, or institutions dedicated to nurturing
+                spiritual growth and moral values.
+            </p>
+            <p>
+                Darusuluk provides an environment for learning, reflection, Zikr, and connecting with righteous scholars
+                for guidance and spiritual elevation.
+            </p>
+        </section>
 
-         <p style="font-size:18px;">
-        These gatherings are often held in homes, masjids, or institutions
-        dedicated to nurturing spiritual growth and moral values.
-         </p>
+        <section>
+            <h4>SILSILAH AALIYA NAQSHBANDIYAH KE WAZAAIF</h4>
+            <p>
+                The “Silsilah Aaliya Naqshbandiyah ke Wazaaif” refers to the spiritual practices (wazaaif, plural of wazifa)
+                prescribed within the Naqshbandi Sufi Order, which follows the Hanafi school of thought and is particularly
+                associated with the Deobandi tradition in South Asia.
+            </p>
+        </section>
 
-        <p style="font-size:18px;">
-        Darusuluk provides an environment for learning, reflection, Zikr, and connecting
-        with righteous scholars for guidance and spiritual elevation.
-        </p>
-        <hr style="border: 2px solid black;"> 
-    </div>
-    <section>
-        <h4>SILSILAH AALIYA NAQSHBANDIYAH KE WAZAAIF</h4>
-        <p>The “Silsilah Aaliya Naqshbandiyah ke Wazaaif” refers to the spiritual practices (wazaaif, plural of wazifa)</p>
-        <p>prescribed within the Naqshbandi Sufi Order, which follows the Hanafi school of thought and is particularly</p>
-        <p>associated with the Deobandi tradition in South Asia.</p>
-        
-    </section>
-    <section> 
-        <h4>What is the Silsilah Aaliya Naqshbandiyah? </h4>
-        <p>Click below link to know more about it.</p>
-        <a href="wsan.html" target="_blank">Silsilah Aaliya Naqshbandiyah</a>
-    </section>
-    <section>
-        <h4>Daily Wazifa Routine (Example)</h4>
-        <p>This is an example of a daily wazifa routine that a murid (disciple) may follow below link:</p>
-        <a href ="sanw.html" target="_blank"> Silsilah Aaliya Naqshbandiyah Ke Wazaif</a>
-    </section>
-    <section>
-        <p>Sunnat Azkaar of the Morning and the Evening</p>
-        <p>From the true Ahadith of Murshid e Kamil, Imam-ul-Ambiya ﷺ</p>
-        <a href="asgar.html" target="_blank">Sunnat Azkaar</a>
-    </section>
+        <section>
+            <h4>What is the Silsilah Aaliya Naqshbandiyah?</h4>
+            <p>Click below link to know more about it.</p>
+            <a href="wsan.html" target="_blank" class="btn btn-success btn-sm">Silsilah Aaliya Naqshbandiyah</a>
+        </section>
+
+        <section>
+            <h4>Daily Wazifa Routine (Example)</h4>
+            <p>This is an example of a daily wazifa routine that a murid (disciple) may follow below link:</p>
+            <a href="sanw.html" target="_blank" class="btn btn-success btn-sm">Silsilah Aaliya Naqshbandiyah Ke Wazaif</a>
+        </section>
+
+        <section>
+            <h4>Sunnat Azkaar of the Morning and the Evening</h4>
+            <p>From the true Ahadith of Murshid e Kamil, Imam-ul-Ambiya ﷺ</p>
+            <a href="asgar.html" target="_blank" class="btn btn-success btn-sm">Sunnat Azkaar</a>
+        </section>
     </main>
+
     <footer>
-        <p style="text-align:center; font-size:14px; color:gray;">
-            © 2023 Darussulok. All rights reserved.
-        </p>
+        © 2023 Darussulok. All rights reserved.
     </footer>
 
-    
 </body>
 </html>
