--- a/sanw.html
+++ b/sanw.html
@@ -3,70 +3,164 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>www.darussulok.com
-    </title>
+    <title>Darussulok - Wazaaif</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Amiri&display=swap" rel="stylesheet">
+
+    <style>
+        body {
+            background: #fdf8ef;
+            font-family: 'Amiri', serif;
+        }
+
+        /* Ornamental Header */
+        header {
+            background: linear-gradient(135deg, #006400, #004d00);
+            color: white;
+            text-align: center;
+            padding: 40px 20px;
+            border-bottom: 8px double #d4af37;
+            position: relative;
+        }
+
+        header::after {
+            content: "";
+            position: absolute;
+            bottom: -15px;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 80%;
+            height: 8px;
+            background: #d4af37;
+            border-radius: 10px;
+        }
+
+        header h1 {
+            font-size: 2.3rem;
+            margin-bottom: 10px;
+        }
+
+        /* Golden Frame Sections */
+        section {
+            background: rgba(255, 255, 255, 0.95);
+            padding: 25px;
+            margin: 30px auto;
+            max-width: 900px;
+            border: 6px double #d4af37;
+            border-radius: 20px;
+            box-shadow: 0px 8px 25px rgba(0,0,0,0.15);
+        }
+
+        /* Decorative Titles */
+        h2, h3, h4 {
+            color: #006400;
+            font-weight: bold;
+            text-align: center;
+            margin-bottom: 15px;
+        }
+
+        h2::after, h3::after, h4::after {
+            content: "❁";
+            display: block;
+            color: #d4af37;
+            font-size: 18px;
+            margin-top: 5px;
+        }
+
+        p {
+            font-size: 18px;
+            line-height: 1.7;
+            text-align: justify;
+        }
+
+        /* Decorative Image */
+        img {
+            display: block;
+            margin: 0 auto 20px;
+            border: 6px solid #d4af37;
+            border-radius: 50%;
+            background: white;
+            padding: 5px;
+            box-shadow: 0px 4px 15px rgba(0,0,0,0.2);
+        }
+
+        /* Wazifa Title Highlight */
+        .wazifa-title {
+            background: #006400;
+            color: white;
+            padding: 4px 8px;
+            border-radius: 8px;
+            border: 2px solid #d4af37;
+            font-weight: bold;
+        }
+
+        /* Button Style */
+        .btn-success {
+            background: linear-gradient(135deg, #006400, #004d00) !important;
+            border: 2px solid #d4af37;
+            font-weight: bold;
+            padding: 8px 18px;
+            border-radius: 25px;
+        }
+
+        footer {
+            background: #004d00;
+            color: white;
+            text-align: center;
+            padding: 12px;
+            font-size: 14px;
+            border-top: 5px solid #d4af37;
+            margin-top: 40px;
+        }
+    </style>
 </head>
 <body>
+
     <header>
-        <h1 style="text-align:center; color:green; background-color:lightgray;">بِسْمِ اللهِ الرَّحْمٰنِ الرَّحِيْمِ</h1>
+        <h1>بِسْمِ اللهِ الرَّحْمٰنِ الرَّحِيْمِ</h1>
+        <h3>✨ Darussulok - Wazaaif ✨</h3>
     </header>
-    <section>
-    <div>
-         <h2 style="color:blue; background-color:lightgray;">Darussulok</h2>
-         <img src="Image1.png" alt="Darussulok Logo" style="width:200px;height:200px;">
-         <h3>✨MAHANA ISLAAHI MAJLIS BANGALORE✨</h3>
-         <p style="font-size:18px;">
-        A "Darusuluk Islahi wa Tarbiyat Majlis" is an Islamic gathering focused on
-        spiritual reform (<strong>Islah</strong>) and upbringing/training (<strong>Tarbiyat</strong>).
-        </p>
 
-         <p style="font-size:18px;">
-        These gatherings are often held in homes, masjids, or institutions
-        dedicated to nurturing spiritual growth and moral values.
-         </p>
-
-        <p style="font-size:18px;">
-        Darusuluk provides an environment for learning, reflection, Zikr, and connecting
-        with righteous scholars for guidance and spiritual elevation.
-        </p>
-        <hr style="border: 2px solid black;"> 
-
-    </div>
-    </section> 
-    <div>
-    <header>
-        <h4>
-            SILSILAH AALIYA NAQSHBANDIYAH KE WAZAAIF
-        </h4>
-    </header>
-    <section>    
+    <section class="text-center">
+        <h2>Darussulok</h2>
+        <img src="Image1.png" alt="Darussulok Logo" width="200" height="200">
+        <h3>MAHANA ISLAAHI MAJLIS BANGALORE</h3>
         <p>
-         <span style="color:white; background-color:green;">1.ISTIGHFAR: </span> <b>Astagfirullaha Rabbee Minn-Kulli Zambeu-Wa Atoobi Elayh.</b>  
-        </p>
-        <p>Subah-100 Times & Shaam-100 Times</p>
-        <p>
-            <span style="color:white; background-color:green;">(2)DAROOD SHAREEF: </span> <b>Allahumma Salli Alaa Sayyidinaa 
-            Muhammad Wa Alaa Aali Sayyidinaa Muhammad Wa Barik Wa Sallim.</b>
-        </p>
-        <p>Subah-100 Times & Shaam-100 Times</p>
-        <p>
-            <span style="color:white; background-color:green;">(3)TILAWAT-E-QURAN: </span> <b>Tilawat-e-Quran ki niyat se Quran ki tilawat karna.</b>
-            <p>Rozaana 1 Juz (30 Para) yaani 20 Pages ki tilawat karna.</p>
+            A "Darusuluk Islahi wa Tarbiyat Majlis" is an Islamic gathering focused on
+            spiritual reform (<strong>Islah</strong>) and upbringing/training (<strong>Tarbiyat</strong>).
+            These gatherings are often held in homes, masjids, or institutions
+            dedicated to nurturing spiritual growth and moral values.
         </p>
         <p>
-            <span style="color:white; background-color:green;">(4)MURAQABAH: </span><b>Thodi Der Ke Liye Sub Kamon Se Hut Kut Kar Allah Ki Yaad Mein Gardan Jhuka Kar Baithna.</b>  
-        </p><b>Yeh Niyyath Karna Kay Allah Ki Rahmath Aarahi Hai Mere Dil Mein Sama Rahi Hai, Mere Dil Se Gunahon</b>
-        <p><b>Ki Zulmath-o-Siyahi Door Ho Rahi Hai Aur Mera Dil Shukriya Ke Taur Par Keh Raha Hai ALLAH, ALLAH, ALLAH...</b> </p>
-        <p>
-            <span style="color:white; background-color:green;">(5)WUQOOF-E-QALBI: </span> <b>Dil Ko Allah Ki Yaad Mein Gharq Karna.</b>
-            <p>Chalte, Phirte, Baithte, Uthte, Har Dum Tawajjo Allah Ki Taraf Rakhna.</p>
+            Darusuluk provides an environment for learning, reflection, Zikr, and connecting
+            with righteous scholars for guidance and spiritual elevation.
         </p>
-        <p>
-            <span style="color:white; background-color:green;">(6)RABTA-E-SHAYKH: </span> <b>Deen Seekhne Ke Liye Shaykh Apne Shaykh Se Rabta Rakhna.</b>
-        </p>
-
     </section>
 
-    </div>
+    <section>
+        <h4>SILSILAH AALIYA NAQSHBANDIYAH KE WAZAAIF</h4>
+
+        <p><span class="wazifa-title">1. ISTIGHFAR:</span> <b>Astagfirullaha Rabbee Minn-Kulli Zambeu-Wa Atoobi Elayh.</b></p>
+        <p>Subah - 100 Times & Shaam - 100 Times</p>
+
+        <p><span class="wazifa-title">2. DAROOD SHAREEF:</span> <b>Allahumma Salli Alaa Sayyidinaa Muhammad Wa Alaa Aali Sayyidinaa Muhammad Wa Barik Wa Sallim.</b></p>
+        <p>Subah - 100 Times & Shaam - 100 Times</p>
+
+        <p><span class="wazifa-title">3. TILAWAT-E-QURAN:</span> <b>Tilawat-e-Quran ki niyat se Quran ki tilawat karna.</b></p>
+        <p>Rozaana 1 Juz (30 Para) yaani 20 Pages ki tilawat karna.</p>
+
+        <p><span class="wazifa-title">4. MURAQABAH:</span> <b>Thodi Der Ke Liye Sub Kamon Se Hut Kut Kar Allah Ki Yaad Mein Gardan Jhuka Kar Baithna.</b></p>
+        <p><b>Yeh Niyyath Karna Kay Allah Ki Rahmath Aarahi Hai Mere Dil Mein Sama Rahi Hai...</b></p>
+
+        <p><span class="wazifa-title">5. WUQOOF-E-QALBI:</span> <b>Dil Ko Allah Ki Yaad Mein Gharq Karna.</b></p>
+        <p>Chalte, Phirte, Baithte, Uthte, Har Dum Tawajjo Allah Ki Taraf Rakhna.</p>
+
+        <p><span class="wazifa-title">6. RABTA-E-SHAYKH:</span> <b>Deen Seekhne Ke Liye Shaykh Apne Shaykh Se Rabta Rakhna.</b></p>
+    </section>
+
+    <footer>
+        © 2023 Darussulok. All rights reserved.
+    </footer>
+
 </body>
 </html>
